Aplicacion_Notificaciones_actualizada

--- a/notifications/templates/notificacion_detail.html
+++ b/notifications/templates/notificacion_detail.html
@@ -8,10 +8,16 @@
 <!-- Título de la sección que muestra el detalle de la notificación -->
 
 <!-- Muestra el mensaje de la notificación -->
-<p>{{ notificacion.mensaje }}</p>
+<h4>{{ notificacion.mensaje }}</h4>
 
 <!-- Muestra la prioridad de la notificación -->
 <p>Prioridad: {{ notificacion.prioridad }}</p>
+
+<!-- Muestra el origen de la notificación -->
+<p>Origen: {{ notificacion.origen }}</p>
+
+<!-- Muestra el tipo de cambio de la notificación -->
+<p>Tipo de Cambio: {{ notificacion.tipo_cambio }}</p>
 
 <!-- Muestra la fecha de creación de la notificación -->
 <p>Fecha de Creación: {{ notificacion.fecha_creacion }}</p>
