--- a/notifications/templates/notificacion_list.html
+++ b/notifications/templates/notificacion_list.html
@@ -1,77 +1,65 @@
 {% extends 'base.html' %}
-
+{% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 {% block content %}
 <div class="container">
     <!-- Grupo de botones para filtrar notificaciones por prioridad -->
-    <div class="btn-group mb-3" role="group" aria-label="Filtrar por prioridad">
-        <h3>Clasificar las notificaciones</h3>
-        <!-- Botón para filtrar notificaciones de alta prioridad -->
-        <a href="?prioridad=alta" class="btn btn-danger {% if request.GET.prioridad == 'alta' %}active{% endif %}">Alta</a>
-        <!-- Botón para filtrar notificaciones de media prioridad -->
-        <a href="?prioridad=media" class="btn btn-warning {% if request.GET.prioridad == 'media' %}active{% endif %}">Media</a>
-        <!-- Botón para filtrar notificaciones de baja prioridad -->
-        <a href="?prioridad=baja" class="btn btn-secondary {% if request.GET.prioridad == 'baja' %}active{% endif %}">Baja</a>
-        <!-- Botón para mostrar todas las notificaciones, independientemente de la prioridad -->
-        <a href="?" class="btn btn-primary {% if not request.GET.prioridad %}active{% endif %}">Mostrar todas</a>
+    <div class="btn-group mb-3" id="bot" role="group" aria-label="Filtrar por prioridad">
+        <h3>Clasificar las notificaciones:</h3>
+        <div>
+            <a href="?prioridad=alta" id="bot"  class="btn btn-danger ml-3 {% if request.GET.prioridad == 'alta' %}active{% endif %}">Alta</a>
+            <a href="?prioridad=media" id="bot"  class="btn btn-warning ml-2 {% if request.GET.prioridad == 'media' %}active{% endif %}">Media</a>
+            <a href="?prioridad=baja" id="bot"  class="btn btn-secondary ml-2 {% if request.GET.prioridad == 'baja' %}active{% endif %}">Baja</a>
+            <a href="?" id="bot"  class="btn btn-primary ml-2 {% if not request.GET.prioridad %}active{% endif %}">Mostrar todas</a>
+        </div>
     </div>
-
+   
     <!-- Barra de búsqueda para buscar notificaciones por mensaje -->
     <form method="get" action="">
         <div class="input-group mb-3">
             <input type="text" name="query" value="{{ query }}" class="form-control" placeholder="Buscar notificación..." aria-label="Buscar notificación" aria-describedby="button-addon2">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+                <button class="btn btn-outline-dark" type="submit" id="button-addon2">Buscar</button>
             </div>
         </div>
     </form>
-
-    <!-- Botón para generar un reporte PDF de las notificaciones -->
-    <a href="{% url 'generar_reporte_pdf' %}" class="btn btn-info mb-3">Generar Reporte PDF</a>
-    
     <h2>Lista de Notificaciones</h2>
 
     <!-- Formulario para eliminar notificaciones seleccionadas -->
     <form method="post" action="{% url 'notificacion_delete_selected' %}">
         {% csrf_token %}
-        <table class="table">
-            <thead>
-                <tr>
-                    <!-- Columna con checkbox para seleccionar todas las notificaciones -->
-                    <th scope="col"><input type="checkbox" id="select_all"> Seleccionar</th>
-                    <th scope="col">Mensaje</th>
-                    <th scope="col">Leído</th>
-                    <th scope="col">Fecha de Creación</th>
-                    <th scope="col">Tipo de Cambio</th>
-                    <th scope="col">Origen</th>
-                    <th scope="col">Prioridad</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Itera sobre las notificaciones para mostrarlas en la tabla -->
-                {% for notificacion in notificaciones %}
-                <tr>
-                    <!-- Checkbox para seleccionar una notificación -->
-                    <td><input type="checkbox" name="notificaciones" value="{{ notificacion.id }}"></td>
-                    <!-- Muestra el mensaje de la notificación con un enlace al detalle -->
-                    <td><a href="{% url 'notificacion_detail' notificacion.pk %}">{{ notificacion.mensaje }}</a></td>
-                    <!-- Muestra si la notificación ha sido leída o no -->
-                    <td>{% if notificacion.leido %}Sí{% else %}No{% endif %}</td>
-                    <!-- Muestra la fecha de creación de la notificación -->
-                    <td>{{ notificacion.fecha_creacion }}</td>
-                    <!-- Muestra el tipo de cambio de la notificación -->
-                    <td>{{ notificacion.tipo_cambio }}</td>
-                    <!-- Muestra el origen de la notificación (software o hardware) -->
-                    <td>{{ notificacion.origen }}</td>
-                    <!-- Muestra la prioridad de la notificación con un estilo visual basado en su valor -->
-                    <td>
-                        <span class="badge {% if notificacion.prioridad == 'alta' %}badge-danger{% elif notificacion.prioridad == 'media' %}badge-warning{% else %}badge-secondary{% endif %}">
-                            {{ notificacion.prioridad }}
-                        </span>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col"><input type="checkbox" id="select_all"> Select</th>
+                        <th scope="col">Mensaje</th>
+                        <th scope="col">Leído</th>
+                        <th scope="col">Fecha de Creación</th>
+                        <th scope="col">Tipo de Cambio</th>
+                        <th scope="col">Origen</th>
+                        <th scope="col">Prioridad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for notificacion in notificaciones %}
+                    <tr>
+                        <td><input type="checkbox" name="notificaciones" value="{{ notificacion.id }}"></td>
+                        <td><a href="{% url 'notificacion_detail' notificacion.pk %}">{{ notificacion.mensaje }}</a></td>
+                        <td>{% if notificacion.leido %}Sí{% else %}No{% endif %}</td>
+                        <td>{{ notificacion.fecha_creacion }}</td>
+                        <td>{{ notificacion.tipo_cambio }}</td>
+                        <td>{{ notificacion.origen }}</td>
+                        <td>
+                            <span class="badge {% if notificacion.prioridad == 'alta' %}badge-danger{% elif notificacion.prioridad == 'media' %}badge-warning{% else %}badge-secondary{% endif %}">
+                                {{ notificacion.prioridad }}
+                            </span>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
         <!-- Dropdown para seleccionar la nueva prioridad de las notificaciones seleccionadas -->
         <div class="form-group">
@@ -82,10 +70,14 @@
                 <option value="baja">Baja</option>
             </select>
         </div>
+        <div class="container-fluid">
+            <!-- Botones para eliminar notificaciones seleccionadas o cambiar su prioridad -->
+            <button type="submit" class="btn btn-dark mr-4" formaction="{% url 'notificacion_delete_selected' %}">Eliminar Seleccionadas</button>
+            <button type="submit" class="btn btn-success mr-4" formaction="{% url 'notificacion_change_priority' %}">Cambiar Prioridad</button>
+            <!-- Botón para generar un reporte PDF de las notificaciones -->
+            <a href="{% url 'generar_reporte_pdf' %}" class="btn btn-info ">Generar Reporte PDF</a>
+        </div>
 
-        <!-- Botones para eliminar notificaciones seleccionadas o cambiar su prioridad -->
-        <button type="submit" class="btn btn-dark" formaction="{% url 'notificacion_delete_selected' %}">Eliminar Seleccionadas</button>
-        <button type="submit" class="btn btn-success" formaction="{% url 'notificacion_change_priority' %}">Cambiar Prioridad</button>
     </form>
 </div>
 
