--- a/notifications/templates/notificacion_list.html
+++ b/notifications/templates/notificacion_list.html
@@ -1,93 +1,160 @@
 {% extends 'base.html' %}
 {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
 {% block content %}
+<style>
+    body{
+        background-color: #DFD3C3;
+    }
+    .container {
+        background-color: #F8EDE3;
+        padding: 20px;
+        border-radius: 20px;
+    }
+    .alert-container {
+        max-height: 200px;
+        overflow-y: auto;
+    }
+</style>
+
 <div class="container">
-    <!-- Grupo de botones para filtrar notificaciones por prioridad -->
-    <div class="btn-group mb-3" id="bot" role="group" aria-label="Filtrar por prioridad">
-        <h3>Clasificar las notificaciones:</h3>
+    {% if messages %}
+        <div class="alert-container">
+            {% for message in messages %}
+                <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% else %}alert-info{% endif %}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <!-- Contador de notificaciones no leídas -->
+    <div class="d-flex justify-content-between mb-3">
+        <h3>Agrupar las notificaciones:</h3>
+        <span id="notification-count" class="badge bg-danger d-none">0</span>
+    </div>
+
+    <div class="btn-group mb-3" role="group" aria-label="Filtrar por prioridad">
         <div>
-            <a href="?prioridad=alta" id="bot"  class="btn btn-danger ml-3 {% if request.GET.prioridad == 'alta' %}active{% endif %}">Alta</a>
-            <a href="?prioridad=media" id="bot"  class="btn btn-warning ml-2 {% if request.GET.prioridad == 'media' %}active{% endif %}">Media</a>
-            <a href="?prioridad=baja" id="bot"  class="btn btn-secondary ml-2 {% if request.GET.prioridad == 'baja' %}active{% endif %}">Baja</a>
-            <a href="?" id="bot"  class="btn btn-primary ml-2 {% if not request.GET.prioridad %}active{% endif %}">Mostrar todas</a>
+            <a href="?prioridad=alta" class="btn btn-danger mx-1 rounded {% if request.GET.prioridad == 'alta' %}active{% endif %}">Alta</a>
+            <a href="?prioridad=media" class="btn btn-warning mx-1 text-white rounded {% if request.GET.prioridad == 'media' %}active{% endif %}">Media</a>
+            <a href="?prioridad=baja" class="btn btn-success mx-1 rounded {% if request.GET.prioridad == 'baja' %}active{% endif %}">Baja</a>
+            <a href="?" class="btn btn-secondary mx-1 rounded {% if not request.GET.prioridad %}active{% endif %}">Mostrar todas</a>
         </div>
     </div>
-   
-    <!-- Barra de búsqueda para buscar notificaciones por mensaje -->
+
     <form method="get" action="">
         <div class="input-group mb-3">
-            <input type="text" name="query" value="{{ query }}" class="form-control" placeholder="Buscar notificación..." aria-label="Buscar notificación" aria-describedby="button-addon2">
+            <input type="text" name="query" value="{{ request.GET.query }}" class="form-control" placeholder="Buscar notificación..." aria-label="Buscar notificación" aria-describedby="button-addon2">
             <div class="input-group-append">
-                <button class="btn btn-outline-dark" type="submit" id="button-addon2">Buscar</button>
+                <button class="btn btn-outline-dark" type="submit" id="button-addon2">Buscar
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                    </svg>
+                </button>
             </div>
         </div>
     </form>
+
     <h2>Lista de Notificaciones</h2>
 
-    <!-- Formulario para eliminar notificaciones seleccionadas -->
     <form method="post" action="{% url 'notificacion_delete_selected' %}">
         {% csrf_token %}
-        <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col"><input type="checkbox" id="select_all"> Select</th>
-                        <th scope="col">Mensaje</th>
-                        <th scope="col">Leído</th>
-                        <th scope="col">Fecha de Creación</th>
-                        <th scope="col">Tipo de Cambio</th>
-                        <th scope="col">Origen</th>
-                        <th scope="col">Prioridad</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for notificacion in notificaciones %}
-                    <tr>
-                        <td><input type="checkbox" name="notificaciones" value="{{ notificacion.id }}"></td>
-                        <td><a href="{% url 'notificacion_detail' notificacion.pk %}">{{ notificacion.mensaje }}</a></td>
-                        <td>{% if notificacion.leido %}Sí{% else %}No{% endif %}</td>
-                        <td>{{ notificacion.fecha_creacion }}</td>
-                        <td>{{ notificacion.tipo_cambio }}</td>
-                        <td>{{ notificacion.origen }}</td>
-                        <td>
-                            <span class="badge {% if notificacion.prioridad == 'alta' %}badge-danger{% elif notificacion.prioridad == 'media' %}badge-warning{% else %}badge-secondary{% endif %}">
-                                {{ notificacion.prioridad }}
-                            </span>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <div class="d-flex">
+            <div class="table-responsive" style="max-height: 400px; overflow-y: auto; width: 70%;">
+                <table class="table">
+                    <thead style="position: sticky; top: 0;">
+                        <tr>
+                            <th scope="col">
+                                <input type="checkbox" id="select_all"> Seleccionar
+                            </th>
+                            <th scope="col">Mensaje</th>
+                            <th scope="col">Leído</th>
+                            <th scope="col">Fecha de Creación</th>
+                            <th scope="col">Prioridad</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for notificacion in notificaciones %}
+                        <tr>
+                            <td><input type="checkbox" name="notificaciones" value="{{ notificacion.id }}" class="seleccionar"></td>
+                            <td><a href="{% url 'notificacion_detail' notificacion.pk %}">{{ notificacion.mensaje }}</a></td>
+                            <td>{% if notificacion.leido %}Sí{% else %}No{% endif %}</td>
+                            <td>{{ notificacion.fecha_creacion }}</td>
+                            <td>
+                                {% if notificacion.prioridad == 'alta' %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-circle-fill" viewBox="0 0 16 16">
+                                        <circle cx="8" cy="8" r="8"/>
+                                    </svg>
+                                {% elif notificacion.prioridad == 'media' %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="yellow" class="bi bi-circle-fill" viewBox="0 0 16 16">
+                                        <circle cx="8" cy="8" r="8"/>
+                                    </svg>
+                                {% else %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-circle-fill" viewBox="0 0 16 16">
+                                        <circle cx="8" cy="8" r="8"/>
+                                    </svg>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="form-group ml-3" style="width: 25%;">
+                <label for="new_priority">Cambiar prioridad a:
+                    <select name="new_priority" id="new_priority" class="form-control">
+                        <option value="alta">Alta</option>
+                        <option value="media">Media</option>
+                        <option value="baja">Baja</option>
+                    </select>
+                </label>
+                <button type="submit" class="btn btn-dark mr-3" formaction="{% url 'notificacion_change_priority' %}" onclick="return confirm('¿Estás seguro que deseas cambiar la prioridad?')">Cambiar Prioridad
+                    <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 16 16">
+                        <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41m-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9"/>
+                        <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5 5 0 0 0 8 3M3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9z"/>
+                    </svg>
+                </button>
+            </div>
         </div>
-
-        <!-- Dropdown para seleccionar la nueva prioridad de las notificaciones seleccionadas -->
-        <div class="form-group">
-            <label for="new_priority">Cambiar prioridad a:</label>
-            <select name="new_priority" id="new_priority" class="form-control">
-                <option value="alta">Alta</option>
-                <option value="media">Media</option>
-                <option value="baja">Baja</option>
-            </select>
+        <div class="container-fluid mt-3">
+            <button type="submit" class="btn btn-dark mr-3" formaction="{% url 'notificacion_delete_selected' %}" onclick="return confirm('¿Estás seguro que deseas eliminar?')">Eliminar Seleccionadas
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1h6z"/>
+                </svg>
+            </button>
+            <button type="submit" class="btn btn-dark" formaction="{% url 'generar_reporte_pdf' %}">Generar Reporte
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-file-earmark-pdf" viewBox="0 0 16 16">
+                    <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6.707l-3.707-3.707A2 2 0 0 0 9.293 0zm.707 1.707L12.586 5H9V1.707zM7 3h2v10H7V3z"/>
+                </svg>
+            </button>
         </div>
-        <div class="container-fluid">
-            <!-- Botones para eliminar notificaciones seleccionadas o cambiar su prioridad -->
-            <button type="submit" class="btn btn-dark mr-4" formaction="{% url 'notificacion_delete_selected' %}">Eliminar Seleccionadas</button>
-            <button type="submit" class="btn btn-success mr-4" formaction="{% url 'notificacion_change_priority' %}">Cambiar Prioridad</button>
-            <!-- Botón para generar un reporte PDF de las notificaciones -->
-            <a href="{% url 'generar_reporte_pdf' %}" class="btn btn-info ">Generar Reporte PDF</a>
-        </div>
-
     </form>
 </div>
 
-<!-- Script para seleccionar o deseleccionar todas las notificaciones con un solo checkbox -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.3/axios.min.js"></script>
 <script>
     document.getElementById('select_all').addEventListener('click', function() {
-        var checkboxes = document.querySelectorAll('input[name="notificaciones"]');
-        for (var checkbox of checkboxes) {
+        const checkboxes = document.querySelectorAll('.seleccionar');
+        checkboxes.forEach(checkbox => {
             checkbox.checked = this.checked;
-        }
+        });
     });
+    var socket = new WebSocket('ws://localhost:8000/ws/notifications/');
+
+    socket.onmessage = function(e) {
+        const data = JSON.parse(e.data);
+        const count = data.unread_count;
+        const notificationCountElement = document.getElementById('notification-count');
+        // Actualizamos el contador de notificaciones no leídas
+        if(count > 0) {
+            notificationCountElement.classList.remove('d-none');
+            notificationCountElement.textContent = count;
+        } else {
+            notificationCountElement.classList.add('d-none');
+        }
+    };
 </script>
+
 {% endblock %}
