--- a/notifications/templates/notificacion_list.html
+++ b/notifications/templates/notificacion_list.html
@@ -40,16 +40,16 @@
             <a href="?prioridad=alta" class="btn btn-danger mx-1 rounded {% if request.GET.prioridad == 'alta' %}active{% endif %}">Alta</a>
             <a href="?prioridad=media" class="btn btn-warning mx-1 text-white rounded {% if request.GET.prioridad == 'media' %}active{% endif %}">Media</a>
             <a href="?prioridad=baja" class="btn btn-success mx-1 rounded {% if request.GET.prioridad == 'baja' %}active{% endif %}">Baja</a>
-            <a href="?" class="btn btn-secondary mx-1 rounded {% if not request.GET.prioridad %}active{% endif %}">Mostrar todas</a>
+            <a href="?" class="btn btn-secondary mx-1 rounded {% if not request.GET.prioridad %}active{% endif %}">Mostrar Todas</a>
         </div>
     </div>
 
     <form method="get" action="">
         <div class="input-group mb-3">
-            <input type="text" name="query" value="{{ request.GET.query }}" class="form-control" placeholder="Buscar notificación..." aria-label="Buscar notificación" aria-describedby="button-addon2">
+            <input type="text" name="query" value="{{ request.GET.query }}" class="form-control" placeholder="Buscar Notificación..." aria-label="Buscar notificación" aria-describedby="button-addon2">
             <div class="input-group-append">
                 <button class="btn btn-outline-dark" type="submit" id="button-addon2">Buscar
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                     </svg>
                 </button>
